syntax = "proto3";

option csharp_namespace="Kw.Comic";
package Kw.Comic;
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

enum UpdateOperators {
    Add = 0;
    Complated=1;
    Fail=2;
    Update=3;
}

message UpdateProgressReponse {
    int64 Total=1;
    int64 Current=2;
    google.protobuf.Timestamp timestamp=3;
    UpdateOperators Operator=4;
    ComicSnapsnot Info=5;
}
message ComicSnapsnot {
    string Name=1;
    string Url=2;
    string Descript=3;
    int64 Total=4;
    int64 Current=5;
    string CurrentName=6;
    string Id=7;
}
enum AddParseStatus {
    Succeed = 0;
    NoSupport = 1;
    HasSame = 2;
    Unknow = 3;
    ToManyJob = 4;
    Busy=5;
}
service AnalysisingService {
    rpc ReceivedUpdateProgress (google.protobuf.Empty) returns (stream UpdateProgressReponse);
}